syntax = "proto3";
import "ai_types.proto";
package hiai;
message DumpDef
{
    bytes model_name = 1;
    bytes is_dump_all = 2;
    repeated bytes layer = 3;
}
message OAMConfigDef
{
    repeated DumpDef dump_list = 1;
    bytes dump_path = 2;
}
message EngineConfig
{
    enum RunSide
    {
        DEVICE=0;
        HOST=1;
    }

    uint32 id =1;   //Engine ID (节点)
    bytes engine_name =2; //Engine 节点名字
    repeated bytes so_name=3; //需要拷贝的所有动态库so文件名列表
    RunSide side=4; //部署在Host侧还是Device侧
    uint32 thread_num = 5;//线程数量
    uint32 thread_priority = 6;//线程优先级
    uint32 queue_size = 7;//队列大小
    AIConfig ai_config = 8; //Aiconfig
    repeated AIModelDescription ai_model = 9; //AIModelDescription
    repeated bytes internal_so_name=10; //不需要拷贝的所有动态库so文件名列表
    uint32 wait_inputdata_max_time = 12; //当前已经收到数据后等待下一个数据的最大超时时间
    uint32 holdModelFileFlag = 13; //是否保留本engine的模型文件，0不保留，非0保留
    OAMConfigDef oam_config = 14; // OAM Config配置
    bool is_repeat_timeout_flag = 15; //engine未收到数据是否重复做超时处理，0不重复，1重复
}
message ConnectConfig
{
    uint32 src_engine_id=1;
    uint32 src_port_id = 2;
    uint32 target_graph_id=3;
    uint32 target_engine_id=4;
    uint32 target_port_id=5;
    bool receive_memory_without_dvpp=6; //接收内存池是否没有给dvpp使用， 0给，1不给
}
message GraphConfig
{
    uint32 graph_id = 1;
    int32 priority = 2;
    bytes device_id = 3;//设备id配置，"0"
    repeated EngineConfig engines = 4;//所有的engine
    repeated ConnectConfig connects = 5;
}
message GraphConfigList
{
    repeated GraphConfig graphs = 1;
}

message ProfileConfig
{
    bytes matrix_profiling = 1;
    bytes ome_profiling = 2;
    bytes cce_profiling =3;
    bytes runtime_profiling = 4;
    bytes PROFILER_TARGET = 5;
    bytes PROFILER_JOBCTX = 6;
    bytes src_path = 7;
    bytes dest_path = 8;
    bytes runtime_config = 9;
    bytes RTS_PATH = 10;
    bytes profiler_jobctx_path = 11;
    bytes profiler_target_path = 12;
}

message GraphUpdateConfig
{
    GraphConfig updataGraphConfig = 1;
    repeated uint32 del_engine_ids = 2;
    repeated ConnectConfig del_connects = 3;
}
